--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "clsx": "^2.1.1",
     "convex": "^1.14.1",
     "dotenv": "^16.4.5",
+    "embla-carousel": "^8.2.0",
+    "embla-carousel-autoplay": "^8.2.0",
+    "embla-carousel-react": "^8.2.0",
     "lucide-react": "^0.428.0",
     "next": "14.2.5",
     "openai": "^4.56.0",
