--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "export": "next export"
   },
   "dependencies": {
     "@clerk/nextjs": "^5.3.1",
@@ -25,6 +26,7 @@
     "embla-carousel": "^8.2.0",
     "embla-carousel-autoplay": "^8.2.0",
     "embla-carousel-react": "^8.2.0",
+    "firebase": "^10.13.1",
     "lucide-react": "^0.428.0",
     "next": "14.2.5",
     "openai": "^4.56.0",
